<resources>
    <string name="app_name">My Beer, Please</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="sort">Sortuj</string>
    <string name="name_sort">po nazwie</string>
    <string name="new_item">Nowy</string>
    <string name="desc">Malejąco</string>
    <string name="asc">Rosnąco</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="app_name_label">My Beer Please</string>
    <string name="price">Cena</string>
    <string name="save">Zapisz</string>
    <string name="name">Nazwa</string>
    <string name="type">Typ</string>
    <string name="description">Opis</string>
</resources>
