<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mikoaj.mybeerplease.EditItemActivity">


    <include
        android:id="@+id/tool_bar_edit_activity"
        layout="@layout/tool_bar"
        ></include>

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/tool_bar_edit_activity"
        android:layout_above="@+id/bottom_bar_edit"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inner_edit_layout"
            android:orientation="vertical"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1"
            android:gravity="center_horizontal">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_button_edit"
                android:onClick="pickImage"
                android:background="@drawable/add_image_shape"
                android:src="@drawable/ic_add_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:id="@+id/name_editText_edit"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:text="@string/price"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/price_text_view_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/textView4"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"  />

            <EditText
                android:id="@+id/type_text_view_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:hint="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars = "vertical"
                android:id="@+id/desc_editText_edit"
                android:layout_gravity="center_horizontal"


                />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_bar_edit"

        android:background="@color/ColorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:orientation="horizontal"

        android:gravity="center">

        <ImageButton
            android:background="@android:color/transparent"
            android:layout_width="@dimen/abc_action_bar_default_height_material"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:onClick="saveClick"
            android:src="@drawable/ic_save"/>
    </LinearLayout>



</RelativeLayout>
